
syntax = "proto3";

package messenger;

// ===== HELLO SERVICE =====
message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

service HelloService {
  rpc Hello(HelloRequest) returns (HelloResponse);
}


// Messenger Service
service MessengerService {
  rpc FindOne (MessageId) returns (Message) {}
}

message MessageId {
  int32 id = 1;
}

message Message {
  int32 id = 1;
  string content = 2;
}

